# surface_defects

./: .dockerignore  .gitignore  Dockerfile_backend  Dockerfile_frontend  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  FastAPI.py  pyproject.toml
backend/backend/: FastAPI.py
detector/: data_reader.py  model_ResNET.py  model_manual_AlexNET.py  model_manual_ResNET.py  model_manual_inception.py  model_mobileNetV3.py  model_small_conv.py  read_data.py  write_wrong_detections.py
frontend/: .dockerignore  .gitignore  Streamlit_GUI.py  pyproject.toml
frontend/frontend/: Streamlit_GUI.py
notebooks/: training.ipynb
